--- a/views/chatbot.handlebars
+++ b/views/chatbot.handlebars
@@ -4,7 +4,7 @@
 <body>
     <iframe
         src="https://web.powerva.microsoft.com/environments/Default-d8bf7c18-5725-4b9e-b118-13388f52e44e/bots/new_bot_bd87b93b6eff48b9b56dfd037332f2c9/webchat"
-        frameborder="0" style="width: 100%; height: 100%;">
+        frameborder="0" style="width: 100%; height: 100%;"></iframe>
 </body>
 
 </html>
